Prefer autotyping to outer tag